--- a/stylesheet.less
+++ b/stylesheet.less
@@ -254,6 +254,10 @@ blockquote p {
 	vertical-align: middle;
 }
 
+.widget.logo {
+	margin-right: 8px;
+}
+
 .widget.companyname a {
 	font-swatch: @font-swatch10-font-size;
 	line-height: @font-swatch10-line-height;
@@ -273,7 +277,6 @@ blockquote p {
 
 	.widget.companyname {
 		.clearfix;
-		margin-left: 10px;
 		a {
 			font-size: @font-swatch10-font-size;
 		}
@@ -309,7 +312,7 @@ blockquote p {
 	float: right;
 	width: 70%;
 	@media @tablet {
-		float: none;
+		float: left;
 		width: 100%;
 	}
 
@@ -338,7 +341,7 @@ blockquote p {
 // The mobile nav icon
 
 .widget .extendednavigation a.pull {
-	top: 10px;
+	top: -28px;
 	height: 30px;
 	width: 30px;
 	margin-top: 4px;
